# Bob

./: .gitignore  CMakeLists.txt  README.md  notes  scratch.cc
bob/core/: CMakeLists.txt
bob/core/include/bob/: core.h
bob/core/include/core/: core.h  profile.h  reading.h  util.h
bob/core/src/: bob.cc  core.cc  profile.cc  reading.cc  util.cc
bob/naive/: CMakeLists.txt
bob/naive/include/naive/: naive.h
bob/naive/src/: main.cc  naive.cc
bob/neural/: CMakeLists.txt
include/bob/: bob.h  bob.hpp  util.h
install/: debug.sh  release.sh
output/: Run-2019-01-20-15:30:44.csv  Run-2019-01-23-14:26:42.csv  Run-2019-01-23-14:35:31.csv  norm-01-19-19-702pm.txt  visualizer.py
profiles/: bob
src/: bob.cc  main.cc  util.cc
